--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       </ol>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="img/banner-serumano.png" class="d-block w-100" alt="Projetos de e-commerce">
+          <img src="img/banner-1-teste.png" class="d-block w-100" alt="Banner Serumano">
 
           <!-- tirar classe d-none -->
           <div class="carousel-caption d-md-block">
@@ -68,17 +68,17 @@
           </div>
         </div>
         <div class="carousel-item">
-          <img src="img/bannerVerde.png" class="d-block w-100" alt="Engenharia de software">
+          <img src="img/banner-2-teste.png" class="d-block w-100" alt="Banner Serumano 2">
           <div class="carousel-caption d-md-block">
             
           </div>
         </div>
         <div class="carousel-item">
-          <img src="img/bannerSelva.jpeg" class="d-block w-100" alt="Manutenção em software">
+          <img src="img/bannerSelva.jpeg" class="d-block w-100" alt="Banner Serumano 3">
           <div class="carousel-caption d-md-block">
             <h2 class="text-white">Serumano Clothing</h5>
             <p class="text-white">Nós estamos comprometidos em levar pra você uma marca consciente.</p>
-            <a href="#" class="main-btn">Entre em contato</a>
+            <a href="https://api.whatsapp.com/send?phone=5547997924101&text=Desejo%20atendimento%20Serumano%20Clothing" target="_blank" class="main-btn">Entre em contato</a>
           </div>
         </div>
       </div>
