--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           <div class="carousel-caption d-md-block">
             <h2>&nbsp;</h5>
             <p>&nbsp;</p>
-            <a href="#" class="main-btn">Ver portfólio</a>
+            <a href="https://drive.google.com/file/d/1VGDxF9h0_ANOU2rZwWdTEVI7QEWE7buO/view?usp=sharing" class="main-btn">Catálogo PDF</a>
           </div>
         </div>
         <div class="carousel-item">
