--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div class="container" id="nav-container">
       <!-- add essa class -->
       <nav class="navbar navbar-expand-lg fixed-top navbar-dark">
-        <a class="navbar-brand" href="index.html">
+        <a class="navbar-brand mt-4" href="index.html">
           <img id="logo" src="img/logo-serumano.png" alt="Logo">
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-links" aria-controls="navbar-links" aria-expanded="false" aria-label="Toggle navigation">
